# crimild

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeListsOLD.txt  CMakePresets.json  LICENSE  README.md  RELEASE_NOTES.md  cmake.yml
coding/src/: CMakeLists.txt  Codable.hpp  Crimild_Coding.cpp  Crimild_Coding.hpp  Decoder.hpp  EncodedData.hpp  EncodedObject.hpp  Encoder.hpp  FileDecoder.cpp  FileEncoder.cpp  MemoryDecoder.cpp  MemoryDecoder.hpp  MemoryEncoder.cpp  MemoryEncoder.hpp  Tags.hpp  TextDecoder.cpp  TextDecoder.hpp  TextEncoder.cpp  TextEncoder.hpp
coding/test/: CMakeLists.txt  CodableTest.cpp  MemoryEncoderTest.cpp  TestRunner.cpp  TextCodingTest.cpp  TextDecoderTest.cpp  TextEncoderTest.cpp
core/: CMakeLists.txt
core/src/: CMakeLists.txt  Crimild.cpp  Crimild.hpp
core/test/: CMakeLists.txt  TestRunner.cpp  crimild_core_test
examples/: CMakeLists.txt  README.md
examples/AlphaBlending/: CMakeLists.txt  Main.cpp
examples/AlphaDiscard/: CMakeLists.txt  Main.cpp
examples/AncientTomb/: CMakeLists.txt  Main.cpp
examples/AnimationBlending/: CMakeLists.txt  Main.cpp
examples/Animations/: CMakeLists.txt  Main.cpp
examples/ArcPrimitive/: CMakeLists.txt  Main.cpp
examples/Arrows/: CMakeLists.txt  Main.cpp
examples/AudioRoom/: CMakeLists.txt  Main.cpp
examples/Blending/: CMakeLists.txt  Main.cpp  earth-atmosphere.tga  earth-color.tga  stars.tga
examples/Bounding3D/: CMakeLists.txt  Main.cpp
examples/Boundings/: CMakeLists.txt  Main.cpp
examples/Boxes/: CMakeLists.txt  Main.cpp
examples/Bricks/: CMakeLists.txt
examples/Cones/: CMakeLists.txt  Main.cpp
examples/Cylinders/: CMakeLists.txt  Main.cpp
examples/Depth/: CMakeLists.txt  Main.cpp
examples/DepthFunc/: CMakeLists.txt  Main.cpp
examples/Drone/: CMakeLists.txt  Main.cpp
examples/Earth/: CMakeLists.txt  Main.cpp
examples/EnvironmentMapping/: CMakeLists.txt
examples/HDR/: CMakeLists.txt  Main.cpp
examples/ImGUI/: CMakeLists.txt  Main.cpp
examples/Instancing/: CMakeLists.txt  Main.cpp
examples/Interpolations/: CMakeLists.txt  Main.cpp
examples/IronMan/: CMakeLists.txt  Main.cpp
examples/Lightcycle/: CMakeLists.txt  Main.cpp
examples/LightingDiffuseMap/: CMakeLists.txt  Main.cpp
examples/LightingDirectional/: CMakeLists.txt  Main.cpp
examples/LightingMaterial/: CMakeLists.txt
examples/LightingMulitple/: CMakeLists.txt  Main.cpp
examples/LightingPoint/: CMakeLists.txt  Main.cpp
examples/LightingSpotlight/: CMakeLists.txt  Main.cpp
examples/LightingUnlit/: CMakeLists.txt
examples/Lines/: CMakeLists.txt  Main.cpp
examples/ModelConverter/: CMakeLists.txt  Main.cpp
examples/ModelViewer/: CMakeLists.txt  Main.cpp
examples/Navigation/: CMakeLists.txt  Main.cpp
examples/NormalMapping/: CMakeLists.txt  Main.cpp
examples/OBJLoader/: CMakeLists.txt  Main.cpp
examples/Occluders/: CMakeLists.txt  Main.cpp
examples/PBRBasic/: CMakeLists.txt  Main.cpp
examples/PBRIBL/: CMakeLists.txt  Main.cpp
examples/PBRModel/: CMakeLists.txt  Main.cpp
examples/PBRTexture/: CMakeLists.txt  Main.cpp
examples/ParallelFor/: CMakeLists.txt  Main.cpp  test.sh
examples/ParametricPrimitives/: CMakeLists.txt  Main.cpp
examples/ParticleShowcase/: CMakeLists.txt  Main.cpp
examples/ParticlesFire/: CMakeLists.txt  Main.cpp
examples/Picking/: CMakeLists.txt  Main.cpp
examples/PipelineCullMode/: CMakeLists.txt  Main.cpp
examples/Planets/: CMakeLists.txt  Main.cpp  crimild.lua  earth.tga  europa.tga  io.tga  jupiter.tga  milky_way.tga  moon.tga  sun.tga
examples/Playground/: CMakeLists.txt  Main.cpp
examples/Points/: CMakeLists.txt  Main.cpp
examples/PostprocessingBlur/: CMakeLists.txt  Main.cpp
examples/PostprocessingEdges/: CMakeLists.txt  Main.cpp
examples/PostprocessingGrayscale/: CMakeLists.txt  Main.cpp
examples/PostprocessingNegative/: CMakeLists.txt  Main.cpp
examples/PostprocessingSharpen/: CMakeLists.txt  Main.cpp
examples/RT_CSG/: CMakeLists.txt  Main.cpp
examples/RT_Cornell/: CMakeLists.txt  Main.cpp
examples/RT_Cubes/: CMakeLists.txt  Main.cpp
examples/RT_Cylinders/: CMakeLists.txt  Main.cpp
examples/RT_Glass/: CMakeLists.txt  Main.cpp
examples/RT_OBJ/: CMakeLists.txt  Main.cpp
examples/RT_Spheres/: CMakeLists.txt  Main.cpp
examples/RT_Triangle/: CMakeLists.txt  Main.cpp
examples/RT_Volumes/: CMakeLists.txt  Main.cpp
examples/RaymarchingCube/: CMakeLists.txt  Main.cpp
examples/RenderOrder/: CMakeLists.txt  Main.cpp  cpp.tga
examples/RenderToTexture/: CMakeLists.txt  Main.cpp
examples/RocketLaunch/: CMakeLists.txt  Main.cpp
examples/SSAO/: CMakeLists.txt  Main.cpp
examples/Saturn/: CMakeLists.txt  Main.cpp
examples/ShadowsDirectional/: CMakeLists.txt  Main.cpp  index.html
examples/ShadowsDirectionalMultiple/: CMakeLists.txt  Main.cpp
examples/ShadowsPoint/: CMakeLists.txt  Main.cpp
examples/ShadowsPointMultiple/: CMakeLists.txt  Main.cpp
examples/ShadowsSpot/: CMakeLists.txt  Main.cpp
examples/ShadowsSpotMultiple/: CMakeLists.txt  Main.cpp
examples/SkinnedMesh/: CMakeLists.txt  Main.cpp
examples/SkinnedMeshAdditiveBlending/: CMakeLists.txt  Main.cpp
examples/SkinnedMeshBlending/: CMakeLists.txt  Main.cpp
examples/Skybox/: CMakeLists.txt
examples/Smiley/: CMakeLists.txt  Main.cpp
examples/Spheres/: CMakeLists.txt  Main.cpp
examples/StencilOutline/: CMakeLists.txt  Main.cpp
examples/Text/: Arial.tga  Arial.txt  Arial_sdf.tga  CMakeLists.txt  Courier New.tga  Courier New_sdf.tga  Main.cpp  Verdana_sdf.tga
examples/TextureCoordinates/: CMakeLists.txt  Main.cpp
examples/TextureFilters/: CMakeLists.txt  Main.cpp  bricks.tga  noise.tga  opengl.tga
examples/TextureMipmaps/: CMakeLists.txt  Main.cpp
examples/TextureWithDynamicImage/: CMakeLists.txt  Main.cpp
examples/TextureWrapping/: CMakeLists.txt  Main.cpp
examples/Textures/: Main.cpp  (+1 more)
tests/: CMakeLists.txt  CrimildTest  CrimildTests  GroupNodeTest  IntersectionTest  MatrixTest  NamedObjectTest  NodeTest  NodeVisitorTest  QuaternionTest  RectTest  TestRunner.cpp  VectorTest
(+3187 files in other folders)
