MESSAGE( "-- Configuring examples:" )

#TODO( Hernan ) : Disable all examples
#IF( NOT( ${ CMAKE_SYSTEM_NAME } STREQUAL "Emscripten" ) )
#FILE( GLOB EXAMPLE_DIRS RELATIVE "${PROJECT_SOURCE_DIR}/examples" * )
#FOREACH( EXAMPLE_DIR ${ EXAMPLE_DIRS } )
#IF( NOT ${ EXAMPLE_DIR } MATCHES "CMakeFiles" )
#IF( IS_DIRECTORY ${ PROJECT_SOURCE_DIR } / examples / ${ EXAMPLE_DIR } )
#ADD_SUBDIRECTORY( ${ EXAMPLE_DIR } )
#ENDIF( IS_DIRECTORY ${ PROJECT_SOURCE_DIR } / examples / ${ EXAMPLE_DIR } )
#ENDIF()
#ENDFOREACH()
#ELSE()
#ADD_SUBDIRECTORY( Triangle )
#ADD_SUBDIRECTORY( Lighting )
#ADD_SUBDIRECTORY( Spotlight )
#ADD_SUBDIRECTORY( Shadows )
#ENDIF()
ADD_SUBDIRECTORY( LightingDirectional )
ADD_SUBDIRECTORY( LightingMulitple )
ADD_SUBDIRECTORY( LightingPoint )
ADD_SUBDIRECTORY( LightingSpotlight )
ADD_SUBDIRECTORY( LightingUnlit )
ADD_SUBDIRECTORY( Playground )
ADD_SUBDIRECTORY( PBRBasic )
ADD_SUBDIRECTORY( ShadowsDirectional )
ADD_SUBDIRECTORY( ShadowsDirectionalMultiple )
ADD_SUBDIRECTORY( ShadowsSpot )
ADD_SUBDIRECTORY( ShadowsSpotMultiple )
ADD_SUBDIRECTORY( ShadowsPoint )
ADD_SUBDIRECTORY( ShadowsPointMultiple )
ADD_SUBDIRECTORY( TextureCoordinates )
ADD_SUBDIRECTORY( Triangle )
