IF ( NOT CRIMILD_ENABLE_TESTS )
	MESSAGE( "-- Skipping unit tests" )
	RETURN()
ENDIF ( NOT CRIMILD_ENABLE_TESTS )

MESSAGE( "-- Configuring unit tests" )

INCLUDE( MacroExtractArchive )

EXTRACT_ARCHIVE( gmock-1.6.0.zip gmock-1.6.0 ${CRIMILD_SOURCE_DIR}/third-party )

ADD_DEFINITIONS( -DGTEST_LANG_CXX11=1 )
ADD_DEFINITIONS( -DGTEST_USE_OWN_TR1_TUPLE=1 )

ADD_SUBDIRECTORY( ${CRIMILD_SOURCE_DIR}/third-party/gmock-1.6.0 "${CMAKE_CURRENT_BINARY_DIR}/../third-party/gmock-1.6.0" )

FILE( GLOB_RECURSE CRIMILD_TESTS_SOURCE_FILES "${CRIMILD_SOURCE_DIR}/tests/*.cpp")

# set default dependencies
SET( CRIMILD_TESTS_DEPENDENCIES
	crimild
	gtest gtest_main
	gmock gmock_main
)

INCLUDE_DIRECTORIES(
	${CRIMILD_SOURCE_DIR}/src
	${CRIMILD_SOURCE_DIR}/tests
	${gtest_SOURCE_DIR}/include 
	${gtest_SOURCE_DIR}
	${gmock_SOURCE_DIR}/include 
	${gmock_SOURCE_DIR}
)

SET( CRIMILD_TEST_EXECUTABLE_NAME CrimildTests )
ADD_EXECUTABLE( ${CRIMILD_TEST_EXECUTABLE_NAME} ${CRIMILD_TESTS_SOURCE_FILES} )
TARGET_LINK_LIBRARIES( ${CRIMILD_TEST_EXECUTABLE_NAME} ${CRIMILD_TESTS_DEPENDENCIES} )
ADD_TEST( ${CRIMILD_TEST_EXECUTABLE_NAME} ${CRIMILD_TEST_EXECUTABLE_NAME} )

